Revision history for perl distribution DOCSIS-ConfigFile

0.76 Not Released
 - Removed DOCSIS::ConfigFile::Syminfo

0.75 2018-06-12T11:09:15+0800
 - Add support for "-o" parameter for bundled script

0.74 2018-06-08T11:20:12+0800
 - Bundled script to encode/decode from command line

0.73 2017-08-22T20:55:16+0200
 - Fix invalid test in longdschannellist.t

0.72 2017-08-22T20:47:24+0200
 - Add missing Types for TLV 202 #9
 - Will die when pack()-ing invalid length

0.71 2016-12-11T10:08:41+0100
 - Fix encoding config with IpTos #jhthorsen/app-docsisious#2

0.70 2015-10-15T01:30:14+0200
 - Add support for decode_docsis \$path_to_file
 - Remove deprecated methods

0.69 2015-04-07T21:13:47Z
 - MtaConfigDelimiter is optional when creating MTA config files
 - Add support for eRouter MangemnetServer TLV #5 Contributor: Josh Galvez

0.68 2015-01-05T10:15:21Z
 - Add configuration tree structure to DOCSIS::ConfigFile::Syminfo pod
 - Require Perl 5.10.1

0.67 2015-01-05T02:34:42Z
 - Add test for handling of 0x0A value in VendorSpecific Contributor:
   dragic.dusan@gmail.com, RT#87812

0.66 2015-01-05T02:09:43Z
 - Fix SnmpCpeAccessControl should be uchar instead of uint Contributor:
   Josh Galvez, RT#99468
 - Use Digest::SHA instead of Digest::SHA1 Contributor:
   dragic.dusan@gmail.com, RT#87814

0.65 2015-01-05T02:01:30Z
 - New API: Will deprecate object oriented API with function based
 - Add decode_docsis() and encode_docsis()
 - Add DOCSIS related MIB files
 - Add debug output with DOCSIS_CONFIGFILE_DEBUG
 - Add support for string OID with optional SNMP.pm dependency

0.64 2013-08-16T23:33:13Z
 - Fix handling of 0x0a value in vendorspec()
 - Add support for VendorSpecific TLVs in Service Flow configuration.
   Contributor Dušan Dragić

0.6302 2013-07-25T21:56:00Z
 - Fix RT83013: Using the right value when checking high/low values

0.6301 2013-07-25T21:12:15Z
 - Fix RT87301: "return" binds stronger than "or". Contributor
   rurban@x-ray.at

0.63 2012-10-10T00:49:37Z