@@ -38,9 +38,8 @@ $bytes = encode_docsis($input);
 is length $bytes, 216, 'encode_docsis';
 
 {
-  local $input->{CmtsMic}    = '0xbedbbbc3a8ecd0f15a44092cc5b6c5bc';
-  local $input->{CmMic}      = '0x08481e28d2c97902fc6c52f547cbbcac';
-  local $input->{GenericTLV} = '';
+  local $input->{CmtsMic} = '0xbedbbbc3a8ecd0f15a44092cc5b6c5bc';
+  local $input->{CmMic}   = '0x08481e28d2c97902fc6c52f547cbbcac';
   is_deeply decode_docsis($bytes), $input, 'decode_docsis';
 }
 
@@ -48,9 +47,8 @@ $bytes = encode_docsis($input, {shared_secret => 's3cret'});
 is length $bytes, 216, 'encode_docsis';
 
 {
-  local $input->{CmtsMic}    = '0xc5ab82b1738136be0a4a75badb454b4e';
-  local $input->{CmMic}      = '0x08481e28d2c97902fc6c52f547cbbcac';
-  local $input->{GenericTLV} = '';
+  local $input->{CmtsMic} = '0xc5ab82b1738136be0a4a75badb454b4e';
+  local $input->{CmMic}   = '0x08481e28d2c97902fc6c52f547cbbcac';
   is_deeply decode_docsis($bytes), $input, 'decode_docsis';
 }
 
