@@ -1,7 +1,9 @@
 Revision history for perl distribution DOCSIS-ConfigFile
 
 0.76 Not Released
- - Removed DOCSIS::ConfigFile::Syminfo
+ - Remove DOCSIS::ConfigFile::Syminfo
+ - Add missing "ushort_list" encode and decode function
+ - Add support for encoding and decoding "SubMgmtFilters" #14
 
 0.75 2018-06-12T11:09:15+0800
  - Add support for "-o" parameter for bundled script
